--- a/views/admin_connexion.html.twig
+++ b/views/admin_connexion.html.twig
@@ -3,16 +3,20 @@
 {% block title %}Connexion{% endblock %}
 
 {% block body %}
+
 <div id="admin_connexion">
-    <h1>Connexion</h1>
+    <img src="/assets/images/logo-dardel-admin.png" id="admin_logo">
+        <div class="error">{{message}}</div>
         <div id="admin_connexion_form">
             <form method="post" action="index.php" class="login">
+            <p>
                 <label for="pseudo">Votre pseudo :</label>
-                    <input type="text" name="login" id="pseudo"/>       
-                    <br/>
+                    <input type="text" name="login" id="pseudo"/>  
+                    </p>
+                    <p>
                     <label for="pass">Votre mot de passe :</label>
                     <input type="password" name="password" id="password"/>
-                    <br/>
+                    </p>
                     <input type="submit" value="Valider"/>
             </form>
         </div>
