--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -1,27 +1,26 @@
 body {
     font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
-    padding: 0;
-    margin: 0;
-    margin-left: 240px;
-    color: #444;
+    color: #000;
     background: #fff;
     font-size: 18px;
-}
+    position: relative;
+    margin: 0;
 
+}
 
 #admin_connexion {
     text-align: left;
     width: 400px;
     margin: 0 auto;
-    color : #5e6871;
+    color : #000;
 }
 
-
 #admin_connexion_form{
-    border: #aaa solid 1px;
+    border: #000 solid 1px;
     border-radius: 4px;
     -webkit-border-radius: 4px;
     height: 130px;
+    margin: 0 auto;
 }
 
 form.login input[type=text], form.login input[type=password], form.login select {
@@ -36,10 +35,10 @@ input[type=text], input[type=password], input[type=number], input[type=date], in
     margin: 0 30px 0 6px;
 }
 
-label {
+/*label {
  display:inline;
  margin:5px 0 0 10px;
- }
+ }*/
 
 
  .login input[type=submit]{
@@ -49,9 +48,10 @@ label {
     height: 30px;
     border: none;
     border-radius: 4px;
-    background-color: #5e6871;
-    color: #fff;
+    background-color: #000;
+    color: #efa747;
     font-size: 16px;
+    cursor: pointer;
  }
 
  #admin_logo{
@@ -66,3 +66,194 @@ label {
     text-align: center;
     color: #fff;
 }
+.info{
+    background-color: #efa747;
+    border: none;
+    margin: 0 0 10px 0;
+    text-align: center;
+    color: #000;
+}
+
+/** navbar **/
+#admin_navbar{
+    width: 100%;
+    background-color:#000;    
+    height: 50px;
+}
+#admin_navbar_container{
+    width: 1000px;    
+    margin-right: auto;
+    margin-left: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+    height: 50px;
+}
+
+#navbar_logo{
+    width: 10%;
+    margin: 10px 0 0 0;
+}
+
+#link_logout{
+    float: right;
+    cursor: pointer;
+}
+#link_logout input[type=submit]{
+    border: none;
+    background-color: #000;
+    color: #efa747; 
+    cursor: pointer;
+    font-size: 18px;
+    outline-style:none;
+    margin:18px 0 0 0;
+}
+
+#content{
+    width: 1000px;
+    margin-right: auto;
+    margin-left: auto;
+    top:-10px;
+}
+
+#admin_menu ul{
+    max-width: 1000px;
+    min-width: 800px;
+    margin: auto;
+    height: 20px;
+    list-style-type: none;
+    text-align: center;
+    padding: 5px 0 35px 150px;
+}
+#admin_menu li,  #admin_sub_menu li{
+    font-variant:small-caps;
+    letter-spacing:0.06em;
+    float:left;
+    padding:0;
+    margin:0 10px 0 0;
+    background-color:#000;
+    -moz-border-radius:5px;
+    -webkit-border-radius:5px; 
+    border-radius:5px;
+}
+#admin_menu li a {
+    display: block;
+    width: 200px;
+    text-decoration: none;
+    padding: 6px;
+    color: #fff;
+    background-color: #000;
+    border-radius:4px;
+}
+#admin_menu ul li a:hover {
+    color: #efa747;
+}
+#admin_title_user{
+    max-width: 1000px;
+    margin: 0 auto;
+    text-align: center;
+    color: #000;
+    font-variant:small-caps;
+}
+.font-bold{
+    font-weight: bold;
+    font-size: 29px;
+}
+#admin_menu .active a{    
+    color: #efa747;
+}
+
+#admin_sub_menu ul {
+    max-width: 1000px;
+    min-width: 800px;
+    margin: auto;
+    height: 20px;
+    list-style-type: none;
+    text-align: center;
+    padding: 5px 0 35px 180px;
+}
+
+#admin_sub_menu li a{
+display: block;
+    width: 300px;
+    text-decoration: none;
+    padding: 6px 0;
+    color: #fff;
+    background-color: #efa747;
+    border-radius:4px;
+    border: 2px solid #000;
+}
+
+#admin_sub_menu ul li a:hover {
+    color: #000;
+}
+
+#user_form{
+    border: 2px solid #efa747;
+    border-radius: 4px;
+    width: 615px;
+    margin: 0 0 0 179px;
+    text-align: center;
+}
+#user_form label {
+    display: block;
+    width: 150px;
+    float: left;
+    margin: 5px 0 5px 85px;
+    text-align: left;
+    font-weight: bold;
+    font-variant:small-caps;
+}
+
+#user_form input[type=text] {
+    width: 200px;
+    border-radius: 4px;
+    -webkit-border-radius: 4px;    
+    height: 30px;
+    margin: 5px 0 5px 0;
+}
+
+.required{
+    color: #c75555;
+}
+#user_form p{
+    font-style: italic;
+    font-size: 14px;
+    text-align: left;
+    margin: 5px 0 5px 85px;
+    color: #c75555;
+}
+h2{
+    font-variant:small-caps;
+    text-align: center;
+}
+
+#user_form input[type=submit]{
+    border: 1px solid #000;
+    background-color: #efa747;
+    color: #fff;
+    cursor: pointer;
+    font-size: 18px;
+    outline-style: none;
+    margin: 18px 0 10px 0;
+    width: 150px;
+    border-radius: 4px;
+    font-variant:small-caps;
+}
+#user_form input[type=submit]:hover{
+    color: #000;
+}
+ #user_list table tr td{
+    border: 1px solid #efa747;
+    border-radius: 4px;
+    width: 615px;
+    margin: 0 0 0 179px;
+    text-align: center;
+   
+ }
+ #user_list th{
+    background-color: #000;
+    color: #efa747;
+    font-weight: normal;
+    border-radius: 4px;
+    text-align: center;
+ }
