--- a/views/specification.html.twig
+++ b/views/specification.html.twig
@@ -1,12 +1,15 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset=utf-8 /> 
-        <title>Admin</title>
-        <meta name="viewport" content="width=device-width, user-scalable=no">
-        <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
-    </head>
-    <body>
+{% extends 'admin.html.twig' %}
+
+{% block title %} Caractéristiques {% endblock %}
+
+{% block body %}
+
+    <div id="admin_sub_menu">
+      <ul>
+        <li><a href="#" id="addUserForm">Ajouter une caractéristique</a></li>
+        <li><a href="#" id="showUserList">Modifier une caractéristique</a></li>
+        </ul>
+    </div>
 
 
 <div id="specification_form" >
@@ -65,6 +68,5 @@
             <input type="submit" value="mettre à jour" name="updateSpecification"/>
             </form>
         </div>
-        </body>
 
-</html>
+{% endblock %}
