add css style and some fix for category

--- a/views/admin.html.twig
+++ b/views/admin.html.twig
@@ -4,7 +4,7 @@
     <meta charset=utf-8 />
     <title>{% block title %}Admin Dardel{% endblock %}</title>
     <link rel="stylesheet" type="text/css" href="/assets/css/admin.css">
-    <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>    
   </head>
   <body>
     <div id="admin_navbar">
@@ -33,5 +33,7 @@
     <div id="content">
       {% block body %}{% endblock %}
     </div>
+
+    <script src="/assets/js/admin.js"></script>
   </body>
 </html>
