--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -8,6 +8,48 @@ body {
 
 }
 
+h2{
+    font-variant:small-caps;
+    text-align: center;
+}
+input[type=submit]{
+    border: 1px solid #000;
+    background-color: #efa747;
+    color: #fff;
+    cursor: pointer;
+    font-size: 18px;
+    outline-style: none;
+    margin: 18px 0 10px 0;
+    width: 150px;
+    border-radius: 4px;
+    font-variant:small-caps;
+}
+input[type=submit]:hover{
+    color: #000;
+}
+label {
+    display: block;
+    width: 150px;
+    float: left;
+    margin: 5px 0 5px 85px;
+    text-align: left;
+    font-weight: bold;
+    font-variant:small-caps;
+}
+input[type=text], input[type=password], select {
+    width: 200px;
+    border-radius: 4px;
+    -webkit-border-radius: 4px;    
+    height: 30px;
+    margin: 5px 0 5px 0;
+    
+}
+/*
+input:-webkit-autofill{
+    background-color:#fff !important;
+    color: #fff !important; 
+}*/
+
 #admin_connexion {
     text-align: left;
     width: 400px;
@@ -15,45 +57,18 @@ body {
     color : #000;
 }
 
-#admin_connexion_form{
-    border: #000 solid 1px;
-    border-radius: 4px;
-    -webkit-border-radius: 4px;
-    height: 130px;
-    margin: 0 auto;
-}
-
-form.login input[type=text], form.login input[type=password], form.login select {
-    width: 165px;
-    border-radius: 4px;
-    -webkit-border-radius: 4px;
-    float: right;
-    height: 20px;
-}
-    
-input[type=text], input[type=password], input[type=number], input[type=date], input[type=checkbox], select {
-    margin: 0 30px 0 6px;
-}
-
-/*label {
- display:inline;
- margin:5px 0 0 10px;
- }*/
-
-
- .login input[type=submit]{
+#admin_connexion_form label{
     text-align: center;
-    width: 180px;
-    margin: 0 0 0 115px;
-    height: 30px;
-    border: none;
-    border-radius: 4px;
-    background-color: #000;
-    color: #efa747;
-    font-size: 16px;
-    cursor: pointer;
- }
+    margin: 5px 0 5px 120px;
+}
 
+#admin_connexion_form{
+    border: 2px solid #efa747;
+    border-radius: 4px;
+    width: 396px;
+    margin: 0 0 0 0;
+    text-align: center;
+}
  #admin_logo{
     margin: 150px 0 50px 0;
     width: 100%;
@@ -124,7 +139,7 @@ input[type=text], input[type=password], input[type=number], input[type=date], in
     text-align: center;
     padding: 5px 0 35px 150px;
 }
-#admin_menu li,  #admin_sub_menu li{
+#admin_menu li,  .admin_sub_menu li{
     font-variant:small-caps;
     letter-spacing:0.06em;
     float:left;
@@ -162,7 +177,7 @@ input[type=text], input[type=password], input[type=number], input[type=date], in
     color: #efa747;
 }
 
-#admin_sub_menu ul {
+.admin_sub_menu ul {
     max-width: 1000px;
     min-width: 800px;
     margin: auto;
@@ -172,7 +187,7 @@ input[type=text], input[type=password], input[type=number], input[type=date], in
     padding: 5px 0 35px 180px;
 }
 
-#admin_sub_menu li a{
+.admin_sub_menu li a{
 display: block;
     width: 300px;
     text-decoration: none;
@@ -183,66 +198,34 @@ display: block;
     border: 2px solid #000;
 }
 
-#admin_sub_menu ul li a:hover {
+.admin_sub_menu ul li a:hover {
     color: #000;
 }
 
-#user_form{
+#user_form, #category_form{
     border: 2px solid #efa747;
     border-radius: 4px;
     width: 615px;
     margin: 0 0 0 179px;
     text-align: center;
 }
-#user_form label {
-    display: block;
-    width: 150px;
-    float: left;
-    margin: 5px 0 5px 85px;
-    text-align: left;
-    font-weight: bold;
-    font-variant:small-caps;
-}
 
-#user_form input[type=text] {
-    width: 200px;
-    border-radius: 4px;
-    -webkit-border-radius: 4px;    
-    height: 30px;
-    margin: 5px 0 5px 0;
-}
+
 
 .required{
     color: #c75555;
 }
-#user_form p{
+#user_form p, , #category_form p{
     font-style: italic;
     font-size: 14px;
     text-align: left;
     margin: 5px 0 5px 85px;
     color: #c75555;
 }
-h2{
-    font-variant:small-caps;
-    text-align: center;
-}
 
-#user_form input[type=submit]{
-    border: 1px solid #000;
-    background-color: #efa747;
-    color: #fff;
-    cursor: pointer;
-    font-size: 18px;
-    outline-style: none;
-    margin: 18px 0 10px 0;
-    width: 150px;
-    border-radius: 4px;
-    font-variant:small-caps;
-}
-#user_form input[type=submit]:hover{
-    color: #000;
-}
- #user_list table tr td{
+
+
+table tr td{
     border: 1px solid #efa747;
     border-radius: 4px;
     width: 615px;
@@ -250,7 +233,7 @@ h2{
     text-align: center;
    
  }
- #user_list th{
+th{
     background-color: #000;
     color: #efa747;
     font-weight: normal;
