--- a/views/admin_connexion.html.twig
+++ b/views/admin_connexion.html.twig
@@ -9,10 +9,10 @@
     <div class="error">{{message}}</div>
     <div id="admin_connexion_form">
         <form method="post" action="index.php" class="login">
-            <label for="pseudo">Votre pseudo :</label>
+            <label for="pseudo">Login</label>
             <input type="text" name="login" id="pseudo"/>
             <br/>
-            <label for="pass">Votre mot de passe :</label>
+            <label for="pass">Mot de passe</label>
             <input type="password" name="password" id="password"/>
             <br/>
             <input type="submit" value="Valider"/>
