--- a/views/specification.html.twig
+++ b/views/specification.html.twig
@@ -4,49 +4,52 @@
 
 {% block body %}
 
-    <div id="admin_sub_menu">
+    <div class="admin_sub_menu">
       <ul>
         <li><a href="#" id="addUserForm">Ajouter une caractéristique</a></li>
         <li><a href="#" id="showUserList">Modifier une caractéristique</a></li>
         </ul>
     </div>
 
+    <div id="specification_form" >
+        <h2>Ajouter une nouvelle specification</h2>
+        <form method="post" action="/controller/specification.php" id="addSepcification">
+            <label for="category">Choississez votre catégorie :</label>
+            <select name="category" id="category" >
+            {% for key, categoryListItem in category_list %}
+                <option value="{{ categoryListItem.category_id }}">{{ categoryListItem.category_title }}</option>
+            {% endfor %}
+            </select>
+            <br/>
+            <label for="code">Code :</label>
+            <input type="text" value="" name="code" id="code" placeholder="Entrez le code"/>
+            <br/>
+            <label for="designation">Désignation :</label>
+            <input type="text" value="" name="designation" id="designation" placeholder="Entrez la designation"/>
+            <br/>
+            <label for="dimension">Dimensions intérieures en mm :</label>
+            <input type="text" value="" name="height" id="height" placeholder="Entrez la hauteur en mm"/>
+            <span>x</span>
+            <input type="text" value="" name="width" id="width" placeholder="Entrez la largeur en mm"/>
+            <br/>
+            <input type="submit" value="Valider" name="addSpecification"/>
+        </form>
+    </div>
 
-<div id="specification_form" >
-            <h2>Ajouter une nouvelle specification</h2>
-            <form method="post" action="/controller/specification.php" id="addSepcification">
-                <label for="category_title">Choississez votre catégorie :</label>
-                <select name="category" id="categorySelect" >
-                {% for key, categoryListItem in category_list %}
-                    <option value="{{ categoryListItem.category_id }}">{{ categoryListItem.category_title }}</option>
-                {% endfor %}
-                </select>
-                <label for="code">Code :</label>
-                <input type="text" value="" name="code" id="code" placeholder="Entrez le code"/>
-                <label for="designation">Désignation :</label>
-                <input type="text" value="" name="designation" id="designation" placeholder="Entrez la designation"/>
-                <label for="dimension">Dimensions intérieures en mm :</label>
-                <input type="text" value="" name="height" id="height" placeholder="Entrez la hauteur en mm"/>
-                <span>x</span>
-                <input type="text" value="" name="width" id="width" placeholder="Entrez la largeur en mm"/>
-                <input type="submit" value="ajouter" name="addSpecification"/>
-            </form>
-        </div>
+    <div id="specification_update_form" >
+        <h2>Modifier les carateristiques</h2>
+        <form method="post" action="/controller/specification.php" id="addSepcification">
+            <label for="category_title">Choississez votre catégorie :</label>
+            <select name="category" id="categorySelect" >
+            {% for key, categoryListItem in category_list %}
+                <option value="{{ categoryListItem.category_id }}">{{ categoryListItem.category_title }}</option>
+            {% endfor %}
+            </select>
+            <input type="submit" value="ajouter" name="chooseSpecification"/>
+        </form>
+    </div>
 
-        <div id="specification_update_form" >
-            <h2>Modifier les carateristiques</h2>
-            <form method="post" action="/controller/specification.php" id="addSepcification">
-                <label for="category_title">Choississez votre catégorie :</label>
-                <select name="category" id="categorySelect" >
-                {% for key, categoryListItem in category_list %}
-                    <option value="{{ categoryListItem.category_id }}">{{ categoryListItem.category_title }}</option>
-                {% endfor %}
-                </select>
-                <input type="submit" value="ajouter" name="chooseSpecification"/>
-            </form>
-        </div>
-
-        <div id="specification_list" >
+    <div id="specification_list" >
         <form method="post" action="/controller/specification.php" id="updateSepcification" name="updateSpecification">
             <table>
                 <tr>
@@ -62,11 +65,10 @@
                     <td><input type="text" value="{{specificationListItem.description}}" name="designation_{{specificationListItem.specification_id}}" id="designation"/></td>
                     <td><input type="text" value="{{specificationListItem.height}}" name="height_{{specificationListItem.specification_id}}" id="height"/> x <input type="text" value="{{specificationListItem.width}}" name="width_{{specificationListItem.specification_id}}" id="width"/></td>                              
                 </tr>
-                {% endfor %}
-                
+                {% endfor %}                
             </table>
             <input type="submit" value="mettre à jour" name="updateSpecification"/>
-            </form>
-        </div>
+        </form>
+    </div>
 
 {% endblock %}
