--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -7,7 +7,6 @@ body {
     margin: 0;
 
 }
-
 h2{
     font-variant:small-caps;
     text-align: center;
@@ -41,27 +40,65 @@ input[type=text], input[type=password], select {
     border-radius: 4px;
     -webkit-border-radius: 4px;    
     height: 30px;
-    margin: 5px 0 5px 0;
-    
+    margin: 5px 0 5px 0;    
 }
-/*
-input:-webkit-autofill{
-    background-color:#fff !important;
-    color: #fff !important; 
-}*/
-
+table tr td{
+    border: 1px solid #efa747;
+    border-radius: 4px;
+    width: 615px;
+    margin: 0 0 0 179px;
+    text-align: center;   
+}
+th{
+    background-color: #000;
+    color: #efa747;
+    font-weight: normal;
+    border-radius: 4px;
+    text-align: center;
+}
+#content{
+    width: 1000px;
+    margin-right: auto;
+    margin-left: auto;
+    top:-10px;
+}
+.required{
+    color: #c75555;
+}
+.font-bold{
+    font-weight: bold;
+    font-size: 29px;
+}
+.error, .info{
+    border: none;
+    margin: 0 0 10px 0;
+    text-align: center;
+}
+.error{
+    background-color: #c75555;    
+    color: #fff;
+}
+.info{
+    background-color: #efa747;    
+    color: #000;
+}
+.italic{
+    font-style: italic;
+}
+.mini-size{
+    font-size: 16px;
+}
+/** admin **/
 #admin_connexion {
     text-align: left;
     width: 400px;
     margin: 0 auto;
     color : #000;
 }
-
 #admin_connexion_form label{
     text-align: center;
     margin: 5px 0 5px 120px;
 }
-
 #admin_connexion_form{
     border: 2px solid #efa747;
     border-radius: 4px;
@@ -69,26 +106,10 @@ input:-webkit-autofill{
     margin: 0 0 0 0;
     text-align: center;
 }
- #admin_logo{
+#admin_logo{
     margin: 150px 0 50px 0;
     width: 100%;
- }
-
- .error{
-    background-color: #c75555;
-    border: none;
-    margin: 0 0 10px 0;
-    text-align: center;
-    color: #fff;
 }
-.info{
-    background-color: #efa747;
-    border: none;
-    margin: 0 0 10px 0;
-    text-align: center;
-    color: #000;
-}
-
 /** navbar **/
 #admin_navbar{
     width: 100%;
@@ -103,12 +124,11 @@ input:-webkit-autofill{
     padding-right: 15px;
     height: 50px;
 }
-
 #navbar_logo{
     width: 10%;
     margin: 10px 0 0 0;
 }
-
+/** link logout **/
 #link_logout{
     float: right;
     cursor: pointer;
@@ -122,14 +142,7 @@ input:-webkit-autofill{
     outline-style:none;
     margin:18px 0 0 0;
 }
-
-#content{
-    width: 1000px;
-    margin-right: auto;
-    margin-left: auto;
-    top:-10px;
-}
-
+/** sub navbar **/
 #admin_menu ul{
     max-width: 1000px;
     min-width: 800px;
@@ -169,14 +182,9 @@ input:-webkit-autofill{
     color: #000;
     font-variant:small-caps;
 }
-.font-bold{
-    font-weight: bold;
-    font-size: 29px;
-}
 #admin_menu .active a{    
     color: #efa747;
 }
-
 .admin_sub_menu ul {
     max-width: 1000px;
     min-width: 800px;
@@ -186,9 +194,8 @@ input:-webkit-autofill{
     text-align: center;
     padding: 5px 0 35px 180px;
 }
-
 .admin_sub_menu li a{
-display: block;
+    display: block;
     width: 300px;
     text-decoration: none;
     padding: 6px 0;
@@ -197,25 +204,18 @@ display: block;
     border-radius:4px;
     border: 2px solid #000;
 }
-
 .admin_sub_menu ul li a:hover {
     color: #000;
 }
-
-#user_form, #category_form{
+/** form **/
+#user_form, #category_form, #specification_form, #specification_update_form{
     border: 2px solid #efa747;
     border-radius: 4px;
     width: 615px;
     margin: 0 0 0 179px;
     text-align: center;
 }
-
-
-
-.required{
-    color: #c75555;
-}
-#user_form p, , #category_form p{
+#user_form p, #category_form p, #specification_form p, #specification_update_form p{
     font-style: italic;
     font-size: 14px;
     text-align: left;
@@ -225,18 +225,4 @@ display: block;
 
 
 
-table tr td{
-    border: 1px solid #efa747;
-    border-radius: 4px;
-    width: 615px;
-    margin: 0 0 0 179px;
-    text-align: center;
-   
- }
-th{
-    background-color: #000;
-    color: #efa747;
-    font-weight: normal;
-    border-radius: 4px;
-    text-align: center;
- }
+
