clean some feature

--- a/views/admin.html.twig
+++ b/views/admin.html.twig
@@ -29,7 +29,7 @@
         <li{%if menu =='user' %} class ="active" {% endif %}><a href="./user.php">Utilisateurs</a></li>
         <li{%if menu =='category' %} class ="active" {% endif %}><a href="./category.php">Catégorie</a></li>
         <li{%if menu =='specification' %} class ="active" {% endif %}><a href="./specification.php">Caractéristiques</a></li>
-        <li{%if menu =='products' %} class ="active" {% endif %}><a href="./product.php">Produits</a></li>
+        <li{%if menu =='product' %} class ="active" {% endif %}><a href="./product.php">Produits</a></li>
         </ul>
     </div>
   {% endif %}
