--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -42,6 +42,12 @@ input[type=text], input[type=password], select {
     height: 30px;
     margin: 5px 0 5px 0;    
 }
+textarea{
+    width: 200px;
+    height: 200px;
+    border-radius: 4px;
+    -webkit-border-radius: 4px;  
+}
 table tr td{
     border: 1px solid #efa747;
     border-radius: 4px;
@@ -208,14 +214,14 @@ th{
     color: #000;
 }
 /** form **/
-#user_form, #category_form, #specification_form, #specification_update_form{
+#user_form, #category_form, #specification_form, #specification_update_form, #product_form{
     border: 2px solid #efa747;
     border-radius: 4px;
     width: 615px;
     margin: 0 0 0 179px;
     text-align: center;
 }
-#user_form p, #category_form p, #specification_form p, #specification_update_form p{
+#user_form p, #category_form p, #specification_form p, #specification_update_form p, #product_form p{
     font-style: italic;
     font-size: 14px;
     text-align: left;
