add function setProduct

--- a/views/admin/product.html.twig
+++ b/views/admin/product.html.twig
@@ -24,7 +24,7 @@
             </select>            
         </form>
         {% if active == true %}
-            <form method="post" action="product.php?language={{language_category}}" id="addProduct">
+            <form method="post" action="product.php?language={{language_product}}" id="addProduct">
                 <label for="category">Catégorie <span class="required">*</span>:</label>
                 <select name="category" id="category" >
                     <option value="">Choisir la catégorie</option>
