--- a/views/admin.html.twig
+++ b/views/admin.html.twig
@@ -30,6 +30,7 @@
         <li{%if menu =='category' %} class ="active" {% endif %}><a href="./category.php">Catégorie</a></li>
         <li{%if menu =='specification' %} class ="active" {% endif %}><a href="./specification.php">Caractéristiques</a></li>
         <li{%if menu =='product' %} class ="active" {% endif %}><a href="./product.php">Produits</a></li>
+        <li{%if menu =='picture' %} class ="active" {% endif %}><a href="./picture.php">Images</a></li>
         </ul>
     </div>
   {% endif %}
